sys-fs/fuse: Bump v.2.9.9+1

--- a/packages/atoms/base-fs/sys-fs/fuse/definition.yaml
+++ b/packages/atoms/base-fs/sys-fs/fuse/definition.yaml
@@ -1,5 +1,5 @@
 name: fuse
-version: 2.9.9
+version: 2.9.9+1
 category: sys-fs
 requires:
 - name: fuse-common
@@ -23,6 +23,6 @@ labels:
   RDEPEND: '>=sys-fs/fuse-common-3.3.0-r1'
   emerge.packages: sys-fs/fuse
   kit: core-kit
-  original.package.name: sys-fs/fuse
+  original.package.name: sys-fs/fuse:0
   original.package.slot: "0"
   original.package.version: 2.9.9
