--- a/packages/atoms/base-fs/app-cdr/cdrtools/build.yaml
+++ b/packages/atoms/base-fs/app-cdr/cdrtools/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race8
+- name: makedepend
   version: '>=0'
-  category: seed
+  category: x11-misc
