dev-libs/libbytesize: Bump v.2.0+1

--- a/packages/atoms/base-fs/dev-libs/libbytesize/definition.yaml
+++ b/packages/atoms/base-fs/dev-libs/libbytesize/definition.yaml
@@ -1,5 +1,5 @@
 name: libbytesize
-version: "2.0"
+version: 2.0+1
 category: dev-libs
 use_flags:
 - -doc
@@ -7,8 +7,8 @@ use_flags:
 - -python_targets_python3_10
 - -python_targets_python3_7
 - -python_targets_python3_8
-- -python_targets_python3_9
 - -test
+- python_targets_python3_9
 requires:
 - name: libpcre2
   version: '>=0'
