toolchain/base-net: Update rdeps

--- a/packages/toolchain/base-net/definition.yaml
+++ b/packages/toolchain/base-net/definition.yaml
@@ -123,6 +123,9 @@ requires:
   - name: ppp-scripts
     category: net-dialup
     version: '>=0'
+  - name: xl2tpd
+    category: net-dialup
+    version: '>=0'
   - name: dnsmasq
     category: net-dns
     version: '>=0'
@@ -195,6 +198,9 @@ requires:
   - name: dhcp
     category: net-misc
     version: '>=0'
+  - name: lksctp-tools
+    category: net-misc
+    version: '>=0'
   - name: mobile-broadband-provider-info
     category: net-misc
     version: '>=0'
@@ -241,6 +247,9 @@ requires:
     category: net-wireless
     version: '>=0'
   - name: crda
+    category: net-wireless
+    version: '>=0'
+  - name: iwd
     category: net-wireless
     version: '>=0'
   - name: wavemon
