net-dns/avahi: Update finalize

--- a/packages/atoms/base-gtk2/net-dns/avahi/finalize.yaml
+++ b/packages/atoms/base-gtk2/net-dns/avahi/finalize.yaml
@@ -2,4 +2,6 @@ shell:
 - /bin/bash
 - -c
 install:
-- entities merge --specs-dir /usr/share/macaroni/entities/ -e avahi
+- >-
+  entities merge --specs-dir /usr/share/macaroni/entities/ -e avahi &&
+  entities merge --specs-dir /usr/share/macaroni/entities/ -e avahi-autoipd
