atoms/db: Review build order

--- a/packages/atoms/db/app-arch/snappy/build.yaml
+++ b/packages/atoms/db/app-arch/snappy/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race9
+- name: mailbase
   version: '>=0'
-  category: seed
+  category: net-mail
