--- a/packages/atoms/db/dev-libs-2/cyrus-sasl/build.yaml
+++ b/packages/atoms/db/dev-libs-2/cyrus-sasl/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: mailbase
+- name: scons
   version: '>=0'
-  category: net-mail
+  category: dev-util
