dev-db/mongodb: Bump v.4.4.23+1

--- a/packages/atoms/db/dev-db/mongodb/build.yaml
+++ b/packages/atoms/db/dev-db/mongodb/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: cheetah3
+- name: cyrus-sasl
   version: '>=0'
-  category: dev-python
+  category: dev-libs-2
