seed/funtoo-kit-geaaru: Bump v.0.20230826

--- a/packages/seeds/funtoo-kit-geaaru/definition.yaml
+++ b/packages/seeds/funtoo-kit-geaaru/definition.yaml
@@ -1,7 +1,7 @@
 name: funtoo-kit-geaaru
-version: 0.20230811+1
+version: "0.20230826"
 category: seed
 labels:
   repo: https://github.com/geaaru/geaaru_overlay.git
   repo_branch: funtoo
-  repo_hash: eca578d4a19bf7a4a2b747d1dea9651dcd46c1c2
+  repo_hash: 58e491497452b46949f7fc52db99b84aef7bfc1e
