dev-libs-2/cyrus-sasl: Bump v.2.1.28+1

--- a/packages/atoms/db/dev-libs-2/cyrus-sasl/definition.yaml
+++ b/packages/atoms/db/dev-libs-2/cyrus-sasl/definition.yaml
@@ -1,16 +1,16 @@
 name: cyrus-sasl
-version: 2.1.28
+version: 2.1.28+1
 category: dev-libs-2
 use_flags:
 - -authdaemond
-- -berkdb
-- -gdbm
-- -kerberos
 - -mysql
 - -openldap
 - -postgres
 - -selinux
 - -sqlite
+- berkdb
+- gdbm
+- kerberos
 - pam
 - ssl
 requires:
