--- a/packages/atoms/base-qt/dev-qt-5/qtdbus/build.yaml
+++ b/packages/atoms/base-qt/dev-qt-5/qtdbus/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race9
+- name: qtcore
   version: '>=0'
-  category: seed
+  category: dev-qt-5
