portage-converter/bas-fs: Add growpart

--- a/portage-converter/base-fs.yml
+++ b/portage-converter/base-fs.yml
@@ -127,6 +127,7 @@ artefacts:
     # TODO: move this on base-python
     - virtual/python-cffi
     - sys-fs/exfat-utils
+    - sys-fs/growpart
 
 - tree: packages/atoms/base-fs
   uses:
