dev-qt-5/qtsql: Bump v.5.15.2+1

--- a/packages/atoms/base-qt/dev-qt-5/qtsql/definition.yaml
+++ b/packages/atoms/base-qt/dev-qt-5/qtsql/definition.yaml
@@ -1,13 +1,13 @@
 name: qtsql
-version: 5.15.2
+version: 5.15.2+1
 category: dev-qt-5
 use_flags:
 - -freetds
 - -mysql
 - -oci8
 - -odbc
+- -postgres
 - -test
-- postgres
 - sqlite
 requires:
 - name: sqlite
