atoms/base-qt: Update builds order

--- a/packages/atoms/base-qt/net-misc/connman/build.yaml
+++ b/packages/atoms/base-qt/net-misc/connman/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race9
+- name: qtdbus
   version: '>=0'
-  category: seed
+  category: dev-qt-5
