atoms/base-qt: Review build order

--- a/packages/atoms/base-qt/dev-qt-5/qttest/build.yaml
+++ b/packages/atoms/base-qt/dev-qt-5/qttest/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: qtsql
+- name: qtnetwork
   version: '>=0'
   category: dev-qt-5
