--- a/packages/atoms/base-qt/dev-qt-5/qtgui/build.yaml
+++ b/packages/atoms/base-qt/dev-qt-5/qtgui/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: qtdeclarative
+- name: connman
   version: '>=0'
-  category: dev-qt-5
+  category: net-misc
