--- a/packages/atoms/base-qt/dev-qt-5/qtsql/build.yaml
+++ b/packages/atoms/base-qt/dev-qt-5/qtsql/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: connman
+- name: qtgui
   version: '>=0'
-  category: net-misc
+  category: dev-qt-5
