atoms/base-qt: Review build order

--- a/packages/atoms/base-qt/dev-qt-5/qtdbus/build.yaml
+++ b/packages/atoms/base-qt/dev-qt-5/qtdbus/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: qtcore
+- name: ibus
   version: '>=0'
-  category: dev-qt-5
+  category: app-i18n
