--- a/packages/atoms/base-qt/app-text/iso-codes/build.yaml
+++ b/packages/atoms/base-qt/app-text/iso-codes/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: unicode-emoji
+- name: qtcore
   version: '>=0'
-  category: app-i18n
+  category: dev-qt-5
