--- a/packages/atoms/base-qt/dev-qt/qtchooser/build.yaml
+++ b/packages/atoms/base-qt/dev-qt/qtchooser/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race9
+- name: unicode-emoji
   version: '>=0'
-  category: seed
+  category: app-i18n
