dev-qt-5/qtgui: Bump v.5.15.2+1

--- a/packages/atoms/base-qt/dev-qt-5/qtgui/definition.yaml
+++ b/packages/atoms/base-qt/dev-qt-5/qtgui/definition.yaml
@@ -1,5 +1,5 @@
 name: qtgui
-version: 5.15.2
+version: 5.15.2+1
 category: dev-qt-5
 use_flags:
 - -eglfs
@@ -17,6 +17,9 @@ use_flags:
 - png
 - udev
 - vulkan
+- wayland
+- egl
+- ibus
 requires:
 - name: glib
   version: '>=0'
