--- a/packages/atoms/base-qt/app-i18n/ibus/definition.yaml
+++ b/packages/atoms/base-qt/app-i18n/ibus/definition.yaml
@@ -1,5 +1,5 @@
 name: ibus
-version: 1.5.20.20190629
+version: 1.5.28
 category: app-i18n
 use_flags:
 - -gconf
@@ -89,7 +89,7 @@ labels:
     ) wayland? ( dev-libs/wayland x11-libs/libxkbcommon ) python? ( gtk? ( x11-libs/gtk+:3[introspection]
     ) )
   emerge.packages: app-i18n/ibus
-  kit: gnome-kit
+  kit: geaaru-kit
   original.package.name: app-i18n/ibus
   original.package.slot: "0"
-  original.package.version: 1.5.20.20190629
+  original.package.version: 1.5.28-r1
