net-misc/connman: Bump v.1.41+1

--- a/packages/atoms/base-qt/net-misc/connman/definition.yaml
+++ b/packages/atoms/base-qt/net-misc/connman/definition.yaml
@@ -1,5 +1,5 @@
 name: connman
-version: "1.41"
+version: 1.41+1
 category: net-misc
 use_flags:
 - -ofono
@@ -15,6 +15,7 @@ use_flags:
 - vpnc
 - wifi
 - wispr
+- networkmanager
 requires:
 - name: xl2tpd
   version: '>=0'
