--- a/packages/atoms/base-qt/dev-qt-5/qtdeclarative/definition.yaml
+++ b/packages/atoms/base-qt/dev-qt-5/qtdeclarative/definition.yaml
@@ -1,10 +1,11 @@
 name: qtdeclarative
-version: 5.15.2
+version: 5.15.2+1
 category: dev-qt-5
 use_flags:
 - -test
 - localstorage
 - widgets
+- vulkan
 requires:
 - name: qtcore
   version: '>=0'
