base-qt: Update build order

--- a/packages/atoms/base-qt/dev-qt-5/qtlocation/build.yaml
+++ b/packages/atoms/base-qt/dev-qt-5/qtlocation/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: qtpositioning
+- name: qtconcurrent
   version: '>=0'
   category: dev-qt-5
