--- a/packages/atoms/base-qt/dev-qt/qtlockedfile/build.yaml
+++ b/packages/atoms/base-qt/dev-qt/qtlockedfile/build.yaml
@@ -24,9 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: qtcore
-  version: '>=0'
-  category: dev-qt-5
-- name: qtcore
+- name: qtgui
   version: '>=0'
   category: dev-qt-5
