--- a/packages/atoms/base-qt/dev-qt-5/qtconcurrent/build.yaml
+++ b/packages/atoms/base-qt/dev-qt-5/qtconcurrent/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: qtcore
+- name: qtpositioning
   version: '>=0'
   category: dev-qt-5
