--- a/packages/atoms/base-qt/dev-qt-5/qtpositioning/build.yaml
+++ b/packages/atoms/base-qt/dev-qt-5/qtpositioning/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: qtconcurrent
+- name: geoclue
   version: '>=0'
-  category: dev-qt-5
+  category: app-misc-2.0
