--- a/packages/atoms/db/dev-libs/libbson/build.yaml
+++ b/packages/atoms/db/dev-libs/libbson/build.yaml
@@ -1,4 +1,7 @@
 prelude:
+# Temporary fix until FL-11505 is done
+- >-
+  cp *.ebuild /var/git/meta-repo/kits/dev-kit/dev-libs/libbson/
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
