--- a/packages/atoms/base-multimedia/media-libs/opus/definition.yaml
+++ b/packages/atoms/base-multimedia/media-libs/opus/definition.yaml
@@ -1,8 +1,9 @@
 name: opus
-version: 1.3.1
+version: 1.3.1+1
 category: media-libs
 use_flags:
 - -doc
+- custom-modes
 annotations:
   subsets:
     rules:
