media-sound/pulseaudio: Bump v.16.1+1

--- a/packages/atoms/base-multimedia/media-sound/pulseaudio/definition.yaml
+++ b/packages/atoms/base-multimedia/media-sound/pulseaudio/definition.yaml
@@ -1,5 +1,5 @@
 name: pulseaudio
-version: "16.1"
+version: 16.1+1
 category: media-sound
 use_flags:
 - -aptx
@@ -31,6 +31,7 @@ use_flags:
 - udev
 - webrtc-aec
 - zeroconf
+- -alsa-plugin
 requires:
 - name: libatomic_ops
   version: '>=0'
