--- a/packages/atoms/base-multimedia/dev-python/rdflib/build.yaml
+++ b/packages/atoms/base-multimedia/dev-python/rdflib/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race10
+- name: poetry-core
   version: '>=0'
-  category: seed
+  category: dev-python
