atoms/base-text: Update build order

--- a/packages/atoms/base-text/dev-perl/Data-OptList/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Data-OptList/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Devel-LexAlias
+- name: Dist-CheckConflicts
   version: '>=0'
   category: dev-perl
