--- a/packages/atoms/base-text/dev-perl/Params-ValidationCompiler/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Params-ValidationCompiler/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Sub-Identify
+- name: Exception-Class
   version: '>=0'
   category: dev-perl
