--- a/packages/atoms/base-text/virtual/perl-Test-Simple/build.yaml
+++ b/packages/atoms/base-text/virtual/perl-Test-Simple/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Sub-Exporter-Progressive
+- name: MRO-Compat
   version: '>=0'
   category: dev-perl
