--- a/packages/atoms/base-text/virtual/perl-XSLoader/build.yaml
+++ b/packages/atoms/base-text/virtual/perl-XSLoader/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Class-Data-Inheritable
+- name: Package-Stash-XS
   version: '>=0'
   category: dev-perl
