--- a/packages/atoms/base-text/dev-perl/B-Hooks-EndOfScope/build.yaml
+++ b/packages/atoms/base-text/dev-perl/B-Hooks-EndOfScope/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Sub-Quote
+- name: Role-Tiny
   version: '>=0'
   category: dev-perl
