--- a/packages/atoms/base-text/dev-perl/Class-Data-Inheritable/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Class-Data-Inheritable/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: texlive-core
+- name: Sub-Install
   version: '>=0'
-  category: app-text
+  category: dev-perl
