--- a/packages/atoms/base-text/dev-perl/Dist-CheckConflicts/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Dist-CheckConflicts/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Module-Runtime
+- name: teckit
   version: '>=0'
-  category: dev-perl
+  category: app-text
