--- a/packages/atoms/base-text/dev-perl/Eval-Closure/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Eval-Closure/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: perl-Test-Simple
+- name: Test-Fatal
   version: '>=0'
-  category: virtual
+  category: dev-perl
