--- a/packages/atoms/base-text/dev-perl/Module-Runtime/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Module-Runtime/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Sub-Exporter
+- name: Devel-Caller
   version: '>=0'
   category: dev-perl
