--- a/packages/atoms/base-text/dev-perl/Params-Util/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Params-Util/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Ref-Util-XS
+- name: Perl-Tidy
   version: '>=0'
   category: dev-perl
