--- a/packages/atoms/base-text/dev-perl/Perl-Tidy/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Perl-Tidy/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: teckit
+- name: Try-Tiny
   version: '>=0'
-  category: app-text
+  category: dev-perl
