--- a/packages/atoms/base-text/dev-perl/Ref-Util/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Ref-Util/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Role-Tiny
+- name: Variable-Magic
   version: '>=0'
   category: dev-perl
