--- a/packages/atoms/base-text/dev-perl/Role-Tiny/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Role-Tiny/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: namespace-clean
+- name: Ref-Util
   version: '>=0'
   category: dev-perl
