--- a/packages/atoms/base-text/dev-perl/Specio/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Specio/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Devel-GlobalDestruction
+- name: Params-ValidationCompiler
   version: '>=0'
   category: dev-perl
