--- a/packages/atoms/base-text/dev-perl/Sub-Exporter/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Sub-Exporter/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Data-OptList
+- name: perl-Test-Simple
   version: '>=0'
-  category: dev-perl
+  category: virtual
