--- a/packages/atoms/base-text/dev-perl/Sub-Identify/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Sub-Identify/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Exception-Class
+- name: namespace-clean
   version: '>=0'
   category: dev-perl
