--- a/packages/atoms/base-text/dev-perl/namespace-autoclean/build.yaml
+++ b/packages/atoms/base-text/dev-perl/namespace-autoclean/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Specio
+- name: Devel-GlobalDestruction
   version: '>=0'
   category: dev-perl
