atoms/base-text: Update build order (disable stage4)

--- a/packages/atoms/base-text/app-text/texlive-core/build.yaml
+++ b/packages/atoms/base-text/app-text/texlive-core/build.yaml
@@ -24,6 +24,15 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
+- name: teckit
+  version: '>=0'
+  category: app-text
 - name: ptexenc
   version: '>=0'
   category: dev-libs
+- name: zziplib
+  version: '>=0'
+  category: dev-libs
+- name: ed
+  version: '>=0'
+  category: sys-apps
