--- a/packages/atoms/base-text/dev-libs/ptexenc/build.yaml
+++ b/packages/atoms/base-text/dev-libs/ptexenc/build.yaml
@@ -24,6 +24,9 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Jcode
+- name: kpathsea
   version: '>=0'
-  category: dev-perl
+  category: dev-libs
+- name: kpathsea
+  version: '>=0'
+  category: dev-libs
