--- a/packages/atoms/base-text/dev-perl/B-Hooks-EndOfScope/build.yaml
+++ b/packages/atoms/base-text/dev-perl/B-Hooks-EndOfScope/build.yaml
@@ -24,6 +24,12 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Role-Tiny
+- name: Module-Implementation
+  version: '>=0'
+  category: dev-perl
+- name: Sub-Exporter-Progressive
+  version: '>=0'
+  category: dev-perl
+- name: Variable-Magic
   version: '>=0'
   category: dev-perl
