--- a/packages/atoms/base-text/dev-perl/Eval-Closure/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Eval-Closure/build.yaml
@@ -24,6 +24,12 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Test-Fatal
+- name: Devel-LexAlias
+  version: '>=0'
+  category: dev-perl
+- name: Perl-Tidy
+  version: '>=0'
+  category: dev-perl
+- name: Try-Tiny
   version: '>=0'
   category: dev-perl
