--- a/packages/atoms/base-text/dev-perl/Exception-Class/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Exception-Class/build.yaml
@@ -24,6 +24,9 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Sub-Identify
+- name: Class-Data-Inheritable
+  version: '>=0'
+  category: dev-perl
+- name: Devel-StackTrace
   version: '>=0'
   category: dev-perl
