--- a/packages/atoms/base-text/dev-perl/OLE-StorageLite/build.yaml
+++ b/packages/atoms/base-text/dev-perl/OLE-StorageLite/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: texlive-latex
+- name: macaroni-funtoo-race10
   version: '>=0'
-  category: dev-texlive
+  category: seed
