--- a/packages/atoms/base-text/dev-perl/Test-Fatal/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Test-Fatal/build.yaml
@@ -24,6 +24,9 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Package-Stash
+- name: Try-Tiny
   version: '>=0'
   category: dev-perl
+- name: perl-Test-Simple
+  version: '>=0'
+  category: virtual
