--- a/packages/atoms/base-text/dev-perl/Text-CSV_XS/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Text-CSV_XS/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: pgf
+- name: perl-XSLoader
   version: '>=0'
-  category: dev-tex
+  category: virtual
