--- a/packages/atoms/base-text/dev-perl/Variable-Magic/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Variable-Magic/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Module-Implementation
+- name: perl-XSLoader
   version: '>=0'
-  category: dev-perl
+  category: virtual
