--- a/packages/atoms/base-text/dev-perl/namespace-autoclean/build.yaml
+++ b/packages/atoms/base-text/dev-perl/namespace-autoclean/build.yaml
@@ -24,6 +24,9 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Devel-GlobalDestruction
+- name: Sub-Identify
+  version: '>=0'
+  category: dev-perl
+- name: namespace-clean
   version: '>=0'
   category: dev-perl
