--- a/packages/atoms/base-text/dev-perl/namespace-clean/build.yaml
+++ b/packages/atoms/base-text/dev-perl/namespace-clean/build.yaml
@@ -24,6 +24,9 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Eval-Closure
+- name: B-Hooks-EndOfScope
+  version: '>=0'
+  category: dev-perl
+- name: Package-Stash
   version: '>=0'
   category: dev-perl
