--- a/packages/atoms/base-text/dev-texlive/texlive-basic/build.yaml
+++ b/packages/atoms/base-text/dev-texlive/texlive-basic/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: perl-XSLoader
+- name: texlive-core
   version: '>=0'
-  category: virtual
+  category: app-text
