--- a/packages/atoms/base-text/dev-texlive/texlive-context/build.yaml
+++ b/packages/atoms/base-text/dev-texlive/texlive-context/build.yaml
@@ -24,6 +24,9 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
+- name: texlive-latex
+  version: '>=0'
+  category: dev-texlive
 - name: texlive-metapost
   version: '>=0'
   category: dev-texlive
