--- a/packages/atoms/base-text/dev-texlive/texlive-latexextra/build.yaml
+++ b/packages/atoms/base-text/dev-texlive/texlive-latexextra/build.yaml
@@ -24,6 +24,12 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: texlive-luatex
+- name: Spreadsheet-ParseExcel
+  version: '>=0'
+  category: dev-perl
+- name: texlive-latexrecommended
+  version: '>=0'
+  category: dev-texlive
+- name: texlive-pictures
   version: '>=0'
   category: dev-texlive
