--- a/packages/atoms/base-text/dev-texlive/texlive-pictures/build.yaml
+++ b/packages/atoms/base-text/dev-texlive/texlive-pictures/build.yaml
@@ -24,6 +24,9 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: texlive-latexrecommended
+- name: pgf
+  version: '>=0'
+  category: dev-tex
+- name: texlive-basic
   version: '>=0'
   category: dev-texlive
