--- a/packages/atoms/base-text/dev-texlive/texlive-xetex/build.yaml
+++ b/packages/atoms/base-text/dev-texlive/texlive-xetex/build.yaml
@@ -27,3 +27,9 @@ requires:
 - name: texlive-latexextra
   version: '>=0'
   category: dev-texlive
+- name: texlive-luatex
+  version: '>=0'
+  category: dev-texlive
+- name: texlive-mathscience
+  version: '>=0'
+  category: dev-texlive
