--- a/packages/atoms/base-text/app-text/teckit/build.yaml
+++ b/packages/atoms/base-text/app-text/teckit/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: kpathsea
+- name: macaroni-funtoo-race10
   version: '>=0'
-  category: dev-libs
+  category: seed
