--- a/packages/atoms/base-text/dev-perl/Data-OptList/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Data-OptList/build.yaml
@@ -24,6 +24,9 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Dist-CheckConflicts
+- name: Params-Util
+  version: '>=0'
+  category: dev-perl
+- name: Sub-Install
   version: '>=0'
   category: dev-perl
