--- a/packages/atoms/base-text/dev-perl/IO-stringy/build.yaml
+++ b/packages/atoms/base-text/dev-perl/IO-stringy/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: ed
+- name: macaroni-funtoo-race10
   version: '>=0'
-  category: sys-apps
+  category: seed
