--- a/packages/atoms/base-text/dev-perl/Log-Dispatch/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Log-Dispatch/build.yaml
@@ -24,6 +24,18 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
+- name: Devel-GlobalDestruction
+  version: '>=0'
+  category: dev-perl
+- name: Dist-CheckConflicts
+  version: '>=0'
+  category: dev-perl
+- name: Params-ValidationCompiler
+  version: '>=0'
+  category: dev-perl
+- name: Specio
+  version: '>=0'
+  category: dev-perl
 - name: namespace-autoclean
   version: '>=0'
   category: dev-perl
