--- a/packages/atoms/base-text/dev-perl/Module-Runtime/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Module-Runtime/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Devel-Caller
+- name: macaroni-funtoo-race10
   version: '>=0'
-  category: dev-perl
+  category: seed
