--- a/packages/atoms/base-text/dev-perl/Package-Stash-XS/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Package-Stash-XS/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: texlive-core
+- name: Dist-CheckConflicts
   version: '>=0'
-  category: app-text
+  category: dev-perl
