--- a/packages/atoms/base-text/dev-perl/Specio/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Specio/build.yaml
@@ -24,6 +24,24 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Params-ValidationCompiler
+- name: Devel-StackTrace
+  version: '>=0'
+  category: dev-perl
+- name: Eval-Closure
+  version: '>=0'
+  category: dev-perl
+- name: MRO-Compat
+  version: '>=0'
+  category: dev-perl
+- name: Ref-Util
+  version: '>=0'
+  category: dev-perl
+- name: Role-Tiny
+  version: '>=0'
+  category: dev-perl
+- name: Sub-Quote
+  version: '>=0'
+  category: dev-perl
+- name: Test-Fatal
   version: '>=0'
   category: dev-perl
