--- a/packages/atoms/base-text/dev-perl/Sub-Quote/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Sub-Quote/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Devel-LexAlias
+- name: Sub-Name
   version: '>=0'
   category: dev-perl
