--- a/packages/atoms/base-text/dev-texlive/texlive-latexrecommended/build.yaml
+++ b/packages/atoms/base-text/dev-texlive/texlive-latexrecommended/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Spreadsheet-ParseExcel
+- name: texlive-latex
   version: '>=0'
-  category: dev-perl
+  category: dev-texlive
