--- a/packages/atoms/base-text/dev-texlive/texlive-mathscience/build.yaml
+++ b/packages/atoms/base-text/dev-texlive/texlive-mathscience/build.yaml
@@ -24,6 +24,9 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: texlive-pictures
+- name: texlive-fontsrecommended
+  version: '>=0'
+  category: dev-texlive
+- name: texlive-latex
   version: '>=0'
   category: dev-texlive
