--- a/packages/atoms/base-text/dev-texlive/texlive-metapost/build.yaml
+++ b/packages/atoms/base-text/dev-texlive/texlive-metapost/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: texlive-latex
+- name: texlive-basic
   version: '>=0'
   category: dev-texlive
