--- a/packages/atoms/base-text/virtual/perl-Test-Simple/build.yaml
+++ b/packages/atoms/base-text/virtual/perl-Test-Simple/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: MRO-Compat
+- name: macaroni-funtoo-race10
   version: '>=0'
-  category: dev-perl
+  category: seed
