--- a/packages/atoms/base-text/virtual/perl-XSLoader/build.yaml
+++ b/packages/atoms/base-text/virtual/perl-XSLoader/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Package-Stash-XS
+- name: macaroni-funtoo-race10
   version: '>=0'
-  category: dev-perl
+  category: seed
