atoms/base-text: Move latex stuff to next race
Reached max deep layers. Trying to postpone compilation
of latex stuff.

--- a/packages/atoms/base-text/dev-perl/Data-OptList/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Data-OptList/build.yaml
@@ -24,9 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Params-Util
-  version: '>=0'
-  category: dev-perl
-- name: Sub-Install
+- name: Module-Runtime
   version: '>=0'
   category: dev-perl
