--- a/packages/atoms/base-text/dev-perl/Eval-Closure/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Eval-Closure/build.yaml
@@ -24,12 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Devel-LexAlias
-  version: '>=0'
-  category: dev-perl
-- name: Perl-Tidy
-  version: '>=0'
-  category: dev-perl
-- name: Try-Tiny
+- name: namespace-clean
   version: '>=0'
   category: dev-perl
