--- a/packages/atoms/base-text/dev-perl/Exception-Class/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Exception-Class/build.yaml
@@ -24,9 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Class-Data-Inheritable
-  version: '>=0'
-  category: dev-perl
-- name: Devel-StackTrace
+- name: Eval-Closure
   version: '>=0'
   category: dev-perl
