--- a/packages/atoms/base-text/dev-perl/Params-ValidationCompiler/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Params-ValidationCompiler/build.yaml
@@ -24,9 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Eval-Closure
-  version: '>=0'
-  category: dev-perl
-- name: Exception-Class
+- name: namespace-autoclean
   version: '>=0'
   category: dev-perl
