--- a/packages/atoms/base-text/dev-perl/Sub-Name/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Sub-Name/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: perl-XSLoader
+- name: Ref-Util-XS
   version: '>=0'
-  category: virtual
+  category: dev-perl
