--- a/packages/atoms/base-text/dev-perl/Test-Fatal/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Test-Fatal/build.yaml
@@ -24,9 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Try-Tiny
+- name: Package-Stash-XS
   version: '>=0'
   category: dev-perl
-- name: perl-Test-Simple
-  version: '>=0'
-  category: virtual
