--- a/packages/atoms/base-text/dev-perl/namespace-autoclean/build.yaml
+++ b/packages/atoms/base-text/dev-perl/namespace-autoclean/build.yaml
@@ -24,9 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Sub-Identify
-  version: '>=0'
-  category: dev-perl
-- name: namespace-clean
+- name: Specio
   version: '>=0'
   category: dev-perl
