--- a/packages/atoms/base-text/dev-perl/Devel-Caller/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Devel-Caller/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: PadWalker
+- name: Sub-Install
   version: '>=0'
   category: dev-perl
