--- a/packages/atoms/base-text/dev-perl/Devel-LexAlias/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Devel-LexAlias/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Devel-Caller
+- name: Devel-StackTrace
   version: '>=0'
   category: dev-perl
