--- a/packages/atoms/base-text/dev-perl/MRO-Compat/build.yaml
+++ b/packages/atoms/base-text/dev-perl/MRO-Compat/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race10
+- name: perl-Test-Simple
   version: '>=0'
-  category: seed
+  category: virtual
