--- a/packages/atoms/base-text/dev-perl/Unicode-Map/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Unicode-Map/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race10
+- name: OLE-StorageLite
   version: '>=0'
-  category: seed
+  category: dev-perl
