--- a/packages/atoms/base-text/virtual/perl-XSLoader/build.yaml
+++ b/packages/atoms/base-text/virtual/perl-XSLoader/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race10
+- name: Sub-Exporter
   version: '>=0'
-  category: seed
+  category: dev-perl
