atoms/base-text: Update build order

--- a/packages/atoms/base-text/dev-perl/namespace-autoclean/build.yaml
+++ b/packages/atoms/base-text/dev-perl/namespace-autoclean/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Specio
+- name: Sub-Identify
   version: '>=0'
   category: dev-perl
