--- a/packages/atoms/base-text/dev-perl/Module-Implementation/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Module-Implementation/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Ref-Util
+- name: Package-Stash-XS
   version: '>=0'
   category: dev-perl
