--- a/packages/atoms/base-text/dev-perl/Package-Stash/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Package-Stash/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Sub-Quote
+- name: B-Hooks-EndOfScope
   version: '>=0'
   category: dev-perl
