--- a/packages/atoms/base-text/dev-perl/Variable-Magic/build.yaml
+++ b/packages/atoms/base-text/dev-perl/Variable-Magic/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: Devel-LexAlias
+- name: Try-Tiny
   version: '>=0'
   category: dev-perl
