dev-perl/Devel-GlobalDestruction: Update specs

--- a/packages/atoms/base-text/dev-perl/Devel-GlobalDestruction/definition.yaml
+++ b/packages/atoms/base-text/dev-perl/Devel-GlobalDestruction/definition.yaml
@@ -2,6 +2,9 @@ name: Devel-GlobalDestruction
 version: 0.140.0
 category: dev-perl
 requires:
+- name: perl
+  version: '>=0'
+  category: dev-lang
 - name: Sub-Exporter-Progressive
   version: '>=0'
   category: dev-perl
