dev-texlive/texlive-formatsextra: Bump v.2020+1

--- a/packages/atoms/base-latex/dev-texlive/texlive-formatsextra/build.yaml
+++ b/packages/atoms/base-latex/dev-texlive/texlive-formatsextra/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: texlive-xetex
+- name: texlive-plaingeneric
   version: '>=0'
   category: dev-texlive
