atoms/base-latex: Update build order

--- a/packages/atoms/base-latex/dev-texlive/texlive-plaingeneric/build.yaml
+++ b/packages/atoms/base-latex/dev-texlive/texlive-plaingeneric/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: texlive-xetex
+- name: Algorithm-Diff
   version: '>=0'
-  category: dev-texlive
+  category: dev-perl
