--- a/packages/atoms/base-latex/dev-texlive/texlive-latexrecommended/build.yaml
+++ b/packages/atoms/base-latex/dev-texlive/texlive-latexrecommended/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: texlive-pictures
+- name: culmus
   version: '>=0'
-  category: dev-texlive
+  category: media-fonts
