media-fonts/culmus: Bump v.0.133+1

--- a/packages/atoms/base-latex/media-fonts/culmus/definition.yaml
+++ b/packages/atoms/base-latex/media-fonts/culmus/definition.yaml
@@ -1,9 +1,12 @@
 name: culmus
-version: "0.133"
+version: 0.133+1
 category: media-fonts
 use_flags:
 - -fontforge
 - X
+- fancy
+- ancient
+- -taamey
 annotations:
   subsets:
     rules:
