atoms/base-latex: Update build order

--- a/packages/atoms/base-latex/dev-texlive/texlive-latexrecommended/build.yaml
+++ b/packages/atoms/base-latex/dev-texlive/texlive-latexrecommended/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: culmus
+- name: texlive-pictures
   version: '>=0'
-  category: media-fonts
+  category: dev-texlive
