--- a/packages/atoms/base-latex/media-fonts/culmus/build.yaml
+++ b/packages/atoms/base-latex/media-fonts/culmus/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: t1utils
+- name: macaroni-funtoo-race11
   version: '>=0'
-  category: app-text
+  category: seed
