--- a/packages/atoms/base-latex/app-text/t1utils/build.yaml
+++ b/packages/atoms/base-latex/app-text/t1utils/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: texlive-pictures
+- name: macaroni-funtoo-race11
   version: '>=0'
-  category: dev-texlive
+  category: seed
