atoms/base-multimedia2: Update build order

--- a/packages/atoms/base-multimedia2/dev-util/spirv-tools/build.yaml
+++ b/packages/atoms/base-multimedia2/dev-util/spirv-tools/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: aribb24
+- name: uchardet
   version: '>=0'
-  category: media-libs
+  category: app-i18n
