--- a/packages/atoms/base-multimedia2/media-libs/libldac/build.yaml
+++ b/packages/atoms/base-multimedia2/media-libs/libldac/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: uchardet
+- name: mujs
   version: '>=0'
-  category: app-i18n
+  category: dev-lang
