--- a/packages/atoms/base-multimedia2/media-plugins-1.0/gst-plugins-assrender/build.yaml
+++ b/packages/atoms/base-multimedia2/media-plugins-1.0/gst-plugins-assrender/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libass
+- name: gst-plugins-bad
   version: '>=0'
-  category: media-libs
+  category: media-libs-1.0
