--- a/packages/atoms/base-multimedia2/x11-libs/libXScrnSaver/build.yaml
+++ b/packages/atoms/base-multimedia2/x11-libs/libXScrnSaver/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: mujs
+- name: libass
   version: '>=0'
-  category: dev-lang
+  category: media-libs
