--- a/packages/atoms/base-multimedia2/app-i18n/uchardet/build.yaml
+++ b/packages/atoms/base-multimedia2/app-i18n/uchardet/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libfreeaptx
+- name: aribb24
   version: '>=0'
   category: media-libs
