--- a/packages/atoms/base-multimedia2/media-libs/libass/build.yaml
+++ b/packages/atoms/base-multimedia2/media-libs/libass/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: gst-plugins-bad
+- name: shaderc
   version: '>=0'
-  category: media-libs-1.0
+  category: media-libs
