--- a/packages/atoms/boot/sys-boot-2/grub/grub-emu/definition.yaml
+++ b/packages/atoms/boot/sys-boot-2/grub/grub-emu/definition.yaml
@@ -39,4 +39,4 @@ labels:
   kit: core-kit
   original.package.name: sys-boot/grub
   original.package.slot: "2"
-  original.package.version: 2.06
+  original.package.version: "2.06"
