--- a/packages/atoms/boot/app-text/mandoc/build.yaml
+++ b/packages/atoms/boot/app-text/mandoc/build.yaml
@@ -1,4 +1,6 @@
 prelude:
+# mandoc conflicts with man-db
+- luet rm -y --nodeps man-db
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
