--- a/packages/atoms/base-qt2/dev-qt-5/qtmultimedia/build.yaml
+++ b/packages/atoms/base-qt2/dev-qt-5/qtmultimedia/build.yaml
@@ -1,4 +1,11 @@
 prelude:
+# TODO: Investigate on this. Enable vulkan requires dev-qt/qtgui:5[egl] else
+#       compilation of qtmultimedia
+- >-
+  export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" &&
+  export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} &&
+  USE="dbus evdev jpeg linuxfb localstorage egl vulkan" emerge dev-qt/qtgui:5  -j
+
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
