--- a/packages/atoms/base-qt2/dev-qt-5/qtwebkit/build.yaml
+++ b/packages/atoms/base-qt2/dev-qt-5/qtwebkit/build.yaml
@@ -1,6 +1,9 @@
 prelude:
-# We need qtgui[egl]
-- luet repo update && luet upgrade -y && luet cleanup
+# We need qtgui[egl] but it seems that just recompile it is not sufficient.
+# TODO: investigate on this. Maybe is a dependency that must be present
+# before compile qtgui.
+#- luet repo update && luet upgrade -y && luet cleanup
+- USE="dbus evdev jpeg linuxfb vulkan egl" emerge qtgui -j
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
