--- a/packages/atoms/base-gnome/app-text/docbook-xml-simple-dtd/definition.yaml
+++ b/packages/atoms/base-gnome/app-text/docbook-xml-simple-dtd/definition.yaml
@@ -1,5 +1,5 @@
 name: docbook-xml-simple-dtd
-version: 4.1.2.4
+version: 4.1.2.4+1
 category: app-text
 requires:
 - name: build-docbook-catalog
@@ -19,7 +19,7 @@ license: docbook
 labels:
   DEPEND: '>=app-arch/unzip-5.41 >=app-text/sgml-common-0.6.3-r2'
   RDEPEND: '>=app-text/build-docbook-catalog-1.6'
-  emerge.packages: app-text/docbook-xml-simple-dtd
+  emerge.packages: app-text/docbook-xml-simple-dtd:0
   kit: text-kit
   original.package.name: app-text/docbook-xml-simple-dtd
   original.package.slot: "0"
