--- a/packages/atoms/base-gnome/app-text/docbook-sgml-utils/build.yaml
+++ b/packages/atoms/base-gnome/app-text/docbook-sgml-utils/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: jadetex
+- name: openjade
   version: '>=0'
   category: app-text
