--- a/packages/atoms/base-gnome/app-text/docbook-sgml-utils/definition.yaml
+++ b/packages/atoms/base-gnome/app-text/docbook-sgml-utils/definition.yaml
@@ -1,8 +1,8 @@
 name: docbook-sgml-utils
-version: 0.6.14
+version: 0.6.14+1
 category: app-text
 use_flags:
-- jadetex
+- -jadetex
 - userland_GNU
 requires:
 - name: docbook-dsssl-stylesheets
@@ -17,9 +17,6 @@ requires:
 - name: docbook-xml-simple-dtd
   version: '>=0'
   category: app-text-4.1.2.5
-- name: jadetex
-  version: '>=0'
-  category: app-text
 - name: openjade
   version: '>=0'
   category: app-text
